--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -14,9 +15,9 @@
             <a class="firm-name" href="./index.html"><span class="first-firm-name">Web</span><span
                     class="second-firm-name">Studio</span> </a>
             <ul class="site-nav list">
-                <li><a class="stydio link" href="./index.html">Студия</a></li>
-                <li><a class="portfolio link" href="./portfolio.html">Портфолио</a></li>
-                <li><a class="communications link" href="">Контакты</a></li>
+                <li><a class="link" href="./index.html">Студия</a></li>
+                <li><a class="link current" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="link" href="">Контакты</a></li>
             </ul>
         </nav>
         <a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
