--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
                 <a class="firm-name" href="./index.html"><span class="first-firm-name">Web</span><span
                         class="second-firm-name">Studio</span> </a>
                 <ul class="site-nav list">
-                    <li><a class="link current" href="./index.html">Студия</a></li>
-                    <li><a class="link" href="./portfolio.html">Портфолио</a></li>
-                    <li><a class="link" href="">Контакты</a></li>
+                    <li class="item"><a class="link current" href="./index.html">Студия</a></li>
+                    <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="item"><a class="link" href="">Контакты</a></li>
                 </ul>
             </nav>
+            <div class="contact"></div>
             <a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             <a class="contact link" href="tel:+380961111111">+38 096 111 11 11</a>
         </div>
