--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <!--Шапка сайта-->
     <header class="page-header">
-        <div class="container">
-            <nav>
+        <div class="header container">
+            <nav class="nav">
                 <a class="firm-name" href="./index.html"><span class="first-firm-name">Web</span><span
                         class="second-firm-name">Studio</span> </a>
                 <ul class="site-nav list">
@@ -24,9 +24,10 @@
                     <li class="item"><a class="link" href="">Контакты</a></li>
                 </ul>
             </nav>
-            <div class="contact"></div>
-            <a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a class="contact link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <div class="contact">
+                <a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="contact link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </div>
         </div>
     </header>
     <main>
