Закончил главную страницу

--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
             <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="projects list">
-                    <li>
+                    <li class="item">
                         <a class="link" href="">
                             <img src="./images/man-cody.jpg" alt="Человек кодит" width="370" height="294">
                         </a>
                     </li>
-                    <li>
+                    <li class="item">
                         <a class="link" href="">
                             <img src="./images/phone-in-hand.jpg" alt="Телефон в руках у человека" width="370" height="294">
                         </a>
                     </li>
-                    <li>
+                    <li class="item">
                         <a class="link" href="">
                             <img src="./images/tablet-with-a-palette-of-colors.jpg" alt="Планшет с палитрой цветов" width="370"
                                 height="294">
@@ -87,10 +87,10 @@
         </section>
         <!--Наша команда-->
         <section class="section team">
-            <div>
+            <div class="container">
                 <h2 class="section-title">Наша команда</h2>
                 <ul class="team list">
-                    <li>
+                    <li class="item">
                         <a href="">
                             <img class="photo" src="./images/Игорь-Демьяненко.jpg" alt="Фотография Игорь Демьяненко" width="270" height="260">
                         </a>
@@ -98,23 +98,23 @@
                         <h3 class="staff-name">Игорь Демьяненко</h3>
                         <p class="specialty" lang="en">Product Designer</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <a class="link" href="">
-                            <img src="./images/Ольга-Репина.jpg" alt="Фотография Ольга Репина" width="270" height="260">
+                            <img class="photo" src="./images/Ольга-Репина.jpg" alt="Фотография Ольга Репина" width="270" height="260">
                         </a>
                         <h3 class="staff-name">Ольга Репина</h3>
                         <p class="specialty" lang="en">Frontend Developer</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <a class="link" href="">
-                            <img src="./images/Николай-Тарасов.jpg" alt="Фотография Николай Тарасов" width="270" height="260">
+                            <img class="photo" src="./images/Николай-Тарасов.jpg" alt="Фотография Николай Тарасов" width="270" height="260">
                         </a>
                         <h3 class="staff-name">Николай Тарасов</h3>
                         <p class="specialty" lang="en">Marketing</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <a class="link" href="">
-                            <img src="./images/Михаил-Ермаков.jpg" alt="Фотография Михаил Ермаков" width="270" height="260">
+                            <img class="photo" src="./images/Михаил-Ермаков.jpg" alt="Фотография Михаил Ермаков" width="270" height="260">
                         </a>
                         <h3 class="staff-name">Михаил Ермаков</h3>
                         <p class="specialty" lang="en">UI Designer</p>
@@ -125,11 +125,20 @@
     </main>
     <!--Подвал-->
     <footer class="page-footer">
-        <a class="firm-name" href="index.html"><span class="first-firm-name">Web</span><span class="third-firm-name">Studio</span> </a>
-        <address class="address"> <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a><br>
-            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
-        </address>
+        <div class="footer container">
+            <a class="firm-name" href="index.html"><span class="first-firm-name">Web</span><span
+                    class="third-firm-name">Studio</span> </a>
+            <address class="address">
+                <ul class="address list">
+                    <li class="item"> <a class="link street" href="https://goo.gl/maps/psgdGGSvyjgULsp37" target="blank">г. Киев, пр-т Леси Украинки, 26</a>
+                    </li>
+                    <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
